Fixed overflow bug with code snippets

--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -1771,7 +1771,7 @@ form {
 		padding:12px;
 		margin:30px 0;
 		color:#fff;
-		overflow:hidden;
+		overflow:scroll;
 	}
 	code {
 		font-size:90%;
